--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix: how to make decision on what is urgent and important">
       <a class="header__link-details" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
+    <main class="main">
       <h1 class="hidden"></h1>
-      <section id="topSectionForAddingElementToList">
+      <section id="add-task">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </section>
       <section>
         <h3>Todo</h3>
-        <ul id="incompleteTasks">
+        <ul id="incomplete-tasks">
           <li>
             <input type="checkbox">
             <label class="task">Pay Bills</label>
@@ -29,7 +29,7 @@
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="Remove button"></button>
           </li>
-          <li class="editMode">
+          <li class="edit-mode">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
